--- a/pages/add-task.html
+++ b/pages/add-task.html
@@ -20,6 +20,7 @@
     <script src="../templates/tpl-dialogs.js" defer></script>
     <script src="../templates/tpl-navigation.js" defer></script>
     <script src="../scripts/dlg-edit-task-assignment.js" defer></script>
+    <script src="../scripts/dlg-add-task-subtask-handling.js" defer></script>
     <script src="../scripts/load-inserts.js" defer></script>
     <script src="../scripts/add-task.js" defer></script>
     <script src="../scripts/manage-user-profil.js" defer></script>
