--- a/pages/add-task-insert.html
+++ b/pages/add-task-insert.html
@@ -53,6 +53,14 @@
 
                 <div class="dlg-edit__main__assigned-user-container"></div>
             </div>
+             <div class="add-task__field">
+                <label for="category" class="required--after">Category</label>
+                <select name="category" id="category" required>
+                    <option value="" disabled selected hidden>Select task category</option>
+                    <option value="technicalTask">Technical Task</option>
+                    <option value="userStory">User Story</option>
+                </select>
+            </div>
             <div class="dlg-edit__main__subtasks-box">
                 <div class="dlg-edit__main__add-subtask-box">
                     <span class="dlg-edit__main__subtask-title">Subtasks</span>
