add: go-back-arrow mobile in legal & privacy policy

--- a/pages/help.html
+++ b/pages/help.html
@@ -58,7 +58,7 @@
         <main>
             <div id="help-page-container" class="content overflow-y">
                 <section id="help-content" class="help-content content-wrapper">
-                    <div class="help-content_head-container">
+                    <div class="h1_head-container">
                         <h1>Help</h1>
                         <img class="go-back-arrow" src="../assets/img/arrow-left-blue.svg" onclick="history.back()"
                             alt="go back arrow">
