--- a/pages/legal-notice.html
+++ b/pages/legal-notice.html
@@ -61,7 +61,11 @@
         <main>
             <div id="legal-page-container" class="content overflow-y">
                 <section id="legal-content" class="legal-content content-wrapper">
-                    <h1>Legal Notice</h1>
+                    <div class="h1_head-container">
+                        <h1>Legal Notice</h1>
+                        <img class="go-back-arrow" src="../assets/img/arrow-left-blue.svg" onclick="history.back()"
+                            alt="go back arrow">
+                    </div>
                     <div>
                         <h2>Imprint</h2><br>
                         <p><strong>Student Names:</strong> Sascha Keßler, Sebastian Hedwig, Marvin Lenhart</p>
