--- a/pages/privacy-policy-external.html
+++ b/pages/privacy-policy-external.html
@@ -47,7 +47,11 @@
         <main class="main-content">
             <div id="data-privacy-page-container" class="content overflow-y">
                 <section id="data-privacy-content" class="data-privacy-content content-wrapper">
-                    <h1>Privacy Policy</h1>
+                    <div class="h1_head-container">
+                        <h1>Privacy Policy</h1>
+                        <img class="go-back-arrow" src="../assets/img/arrow-left-blue.svg" onclick="history.back()"
+                            alt="go back arrow">
+                    </div>
                     <h2>1. Data Protection at a Glance</h2>
                     <h3>General Information</h3>
                     <p>The following notes provide a simple overview of what happens to your personal data when you
