mplement urgent-deadline filter & date sorting

--- a/pages/summary.html
+++ b/pages/summary.html
@@ -111,7 +111,7 @@
                                     </div>
                                     <div class="grey_seperator"></div>
                                     <div class="metrics__box-text">
-                                        <span class="metrics__box-date" id="current-date">Date</span>
+                                        <span class="metrics__box-date" id="next-due-date">Date</span>
                                         <span>Upcoming Deadline</span>
                                     </div>
                                 </a>
