refactor: update function names and improve styling; add external CSS for responsive design

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -100,7 +100,7 @@
                                                 alt="a grey pencil"
                                                 onclick="renderEditContactDlg(); hideContactActionMenu()">
                                             <img class="action__delete" src="../assets/img/delete-with-text.svg"
-                                                alt="a grey trashbin" onclick="deleteUserFromDB()">
+                                                alt="a grey trashbin" onclick="deleteUserFlow()">
                                         </div>
                                     </div>
                                 </div>
