--- a/pages/privacy-policy-external.html
+++ b/pages/privacy-policy-external.html
@@ -9,10 +9,10 @@
     <link rel="icon" href="../assets/img/logo-black.png" type="image/x-icon">
 
     <link rel="stylesheet" href="../style.css">
-
     <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/navigation.css">
     <link rel="stylesheet" href="../styles/privacy-policy.css">
+        <link rel="stylesheet" href="../styles/external.css">
     <script src="../script.js" defer></script>
     <script src="../scripts/navigation.js" defer></script>
     <script src="../templates/tpl-navigation.js" defer></script>
