--- a/pages/legal-notice-external.html
+++ b/pages/legal-notice-external.html
@@ -7,11 +7,11 @@
 
     <title>Kanban Board</title>
     <link rel="icon" href="../assets/img/logo-black.png" type="image/x-icon">
-
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/navigation.css">
     <link rel="stylesheet" href="../styles/legal-notice.css">
+    <link rel="stylesheet" href="../styles/external.css">
     <script src="../script.js" defer></script>
     <script src="../scripts/navigation.js" defer></script>
     <script src="../templates/tpl-navigation.js" defer></script>
