--- a/pages/board.html
+++ b/pages/board.html
@@ -23,6 +23,7 @@
     <script src="../scripts/task-card.js" defer></script>
     <script src="../scripts/add-task.js" defer></script>
     <script src="../scripts/board.js" defer></script>
+    <script src="../scripts/search-task.js" defer></script>
     <script src="../scripts/load-inserts.js" defer></script>
     <script src="../scripts/dlg-edit-task-assignment.js" defer></script>
     <script src="../scripts/dlg-add-task-subtask-handling.js" defer></script>
