--- a/pages/add-task-insert.html
+++ b/pages/add-task-insert.html
@@ -7,16 +7,16 @@
             <div class="add-task__left-column">
                 <div class="add-task__field">
                     <label for="title" class="required--after">Title</label>
-                    <input class="input--validation-modifier" type="text" id="title" placeholder="Enter a title"
+                    <input name="title" class="input--validation-modifier" type="text" id="title" placeholder="Enter a title"
                         required>
                 </div>
                 <div class="add-task__field">
                     <label for="description">Description</label>
-                    <textarea name="Add Task Description" id="description" placeholder="Enter a Description"></textarea>
+                    <textarea name="description" id="description" placeholder="Enter a Description"></textarea>
                 </div>
                 <div class="add-task__field">
                     <label for="due-date" class="required required--after">Due date</label>
-                    <input onclick="setMinDueDate()" class="input--validation-modifier" type="date" id="due-date"
+                    <input name="dueDate" onclick="setMinDueDate()" class="input--validation-modifier" type="date" id="due-date"
                         placeholder="dd/mm/yyyy" required>
                 </div>
             </div>
@@ -52,14 +52,40 @@
 
                     <div class="dlg-edit__main__assigned-user-container"></div>
                 </div>
-                <div class="add-task__field">
-                    <label for="category" class="required--after">Category</label>
-                    <select name="category" id="category" required>
-                        <option value="" disabled selected hidden>Select task category</option>
-                        <option value="technicalTask">Technical Task</option>
-                        <option value="userStory">User Story</option>
-                    </select>
-                </div>
+                <div class="dlg-edit__main__task-assignments-box">
+    <span class="dlg-edit__main__assignments-title required--after">Category</span>
+
+    <div class="category-selection">
+        <div class="search-wrapper" name="category">
+            <!-- sichtbares Feld (bleibt readonly) -->
+    <input 
+      type="text" 
+      class="selector" 
+      placeholder="Category" 
+      readonly
+      aria-haspopup="listbox"
+      aria-expanded="false"
+    >
+
+    <!-- Proxy für native required-Validierung -->
+    <input 
+      id="category-proxy" 
+      class="category-proxy" 
+      type="text" 
+      required
+      tabindex="-1"
+    >
+        </div>
+
+        <ul class="category-options" id="category-list">
+            <li data-value="technical">Technical Task</li>
+            <li data-value="user-story">User Story</li>
+        </ul>
+    </div>
+
+    <!-- Hidden value for submitting -->
+    <input type="hidden" id="category-hidden" name="category">
+</div>
                 <div class="dlg-edit__main__subtasks-box">
                     <div class="dlg-edit__main__add-subtask-box">
                         <span class="dlg-edit__main__subtask-title">Subtasks</span>
@@ -73,7 +99,7 @@
                                 <img class="subtask-input__confirm-img" src="../assets/img/check.svg"
                                     alt="Add Subtask" />
                             </div>
-                        </div>
+                        </div>               
                     </div>
                     <ul class="dlg-edit__subtask-list"></ul>
                 </div>
