bug-fix: word space in search highlighting and title format in board

--- a/pages/board.html
+++ b/pages/board.html
@@ -101,7 +101,7 @@
                     <div id="board-table" class="board__table">
 
                         <div id="to-do-container" class="board__table__column">
-                            <span>
+                            <span class="board__table__column__title">
                                 <h2>To do</h2>
                                 <img class="add-task-to-btn" src="../assets/img/add-btn-border.svg"
                                     alt="add task to 'to do'" onclick="renderAddTaskDlg('to-do')">
@@ -111,7 +111,7 @@
                         </div>
 
                         <div id="in-progress-container" class="board__table__column">
-                            <span>
+                            <span class="board__table__column__title">
                                 <h2>In Progress</h2>
                                 <img class="add-task-to-btn" src="../assets/img/add-btn-border.svg"
                                     alt="add task to 'in progress'" onclick="renderAddTaskDlg('in-progress')">
@@ -121,7 +121,7 @@
                         </div>
 
                         <div id="await-feedback-container" class="board__table__column">
-                            <span>
+                            <span class="board__table__column__title">
                                 <h2>Await Feedback</h2>
                                 <img class="add-task-to-btn" src="../assets/img/add-btn-border.svg"
                                     alt="add task to 'await feedback'" onclick="renderAddTaskDlg('await-feedback')">
